Fixes carousel clicks by unsetting z-index

--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -45,3 +45,7 @@ div.carousel-container .carousel .slide .legend {
     left: 15%;
   }
 }
+
+li.slide.selected {
+  z-index: unset !important;
+}
